--- a/config.json
+++ b/config.json
@@ -2,11 +2,8 @@
     "architecture": [
         ["C", 7, 64, 2, 3],
         ["M", 2, 2],
-        ["C", 3, 192, 1, 1],
-        ["M", 2, 2],
-        ["C", 1, 128, 1, 0],
+        ["C", 3, 128, 1, 1],
         ["C", 3, 256, 1, 1],
-        ["C", 1, 256, 1, 0],
         ["C", 3, 512, 1, 1],
         ["M", 2, 2],
         ["B", [1, 256, 1, 0], [3, 512, 1, 1], 4],
@@ -14,23 +11,22 @@
         ["C", 3, 1024, 1, 1],
         ["M", 2, 2],
         ["B", [1, 512, 1, 0], [3, 1024, 1, 1], 2],
-        ["C", 3, 1024, 1, 1],
-        ["C", 3, 1024, 2, 1],
-        ["C", 3, 1024, 1, 1],
         ["C", 3, 1024, 1, 1]
     ],
     "seed": 42,
-    "image_size": 448,
-    "batch_size": 32,
+    "image_size": 128,
+    "in_channels": 1,
+    "batch_size": 128,
     "learning_rate": 2e-5,
-    "epochs": 1000,
+    "epochs": 100,
     "eval_interval": 5,
-    "checkpoint_interval": 100,
+    "checkpoint_interval": 25,
     "iou_threshold": 0.5,
     "conf_threshold": 0.4,
+    "lambda_noobj": 0.5,
+    "lambda_coord": 5,
     "dropout": 0.1,
-    "in_channels": 1,
-    "splits": 7,
-    "boxes": 2,
+    "grid": [8, 8],
+    "boxes_per_cell": 1,
     "classes": 1
 }
