Updated model; added training data transformation, removed class computation, changed loss function, fixed metrics calculations.

--- a/config.json
+++ b/config.json
@@ -16,17 +16,18 @@
     "seed": 42,
     "image_size": 128,
     "in_channels": 1,
-    "batch_size": 128,
+    "batch_size": 256,
     "learning_rate": 2e-5,
-    "epochs": 100,
+    "epochs": 1000,
     "eval_interval": 5,
-    "checkpoint_interval": 25,
+    "checkpoint_interval": 200,
     "iou_threshold": 0.5,
     "conf_threshold": 0.4,
+    "max_grad_norm": 5.0,
     "lambda_noobj": 0.5,
-    "lambda_coord": 5,
-    "dropout": 0.1,
+    "lambda_coord": 2.0,
+    "lambda_obj": 2.0,
+    "dropout": 0.2,
     "grid": [8, 8],
-    "boxes_per_cell": 1,
-    "classes": 1
+    "boxes_per_cell": 1
 }
