--- a/config.json
+++ b/config.json
@@ -1,32 +1,47 @@
 {
     "architecture": [
-        ["C", 7, 64, 2, 3],
-        ["M", 2, 2],
-        ["C", 3, 128, 1, 1],
-        ["C", 3, 256, 1, 1],
-        ["C", 3, 512, 1, 1],
-        ["M", 2, 2],
-        ["B", [1, 256, 1, 0], [3, 512, 1, 1], 4],
+        ["C", 3, 32, 1, 1],
+        ["C", 3, 64, 2, 1],
+        ["R", 1],
+        ["C", 3, 128, 2, 1],
+        ["R", 2],
+        ["C", 3, 256, 2, 1],
+        ["R", 8],
+        ["C", 3, 512, 2, 1],
+        ["R", 8],
+        ["C", 3, 1024, 2, 1],
+        ["R", 4],
         ["C", 1, 512, 1, 0],
         ["C", 3, 1024, 1, 1],
-        ["M", 2, 2],
-        ["B", [1, 512, 1, 0], [3, 1024, 1, 1], 2],
-        ["C", 3, 1024, 1, 1]
+        ["S"],
+        ["C", 1, 256, 1, 0],
+        ["U", 2],
+        ["C", 1, 256, 1, 0],
+        ["C", 3, 512, 1, 1],
+        ["S"],
+        ["C", 1, 128, 1, 0],
+        ["U", 2],
+        ["C", 1, 128, 1, 0],
+        ["C", 3, 256, 1, 1],
+        ["P"]
     ],
-    "seed": 42,
-    "image_size": 128,
+    "image_size": 512,
     "in_channels": 1,
-    "batch_size": 256,
-    "learning_rate": 2e-5,
+    "grid": [64, 64],
+    "anchor": [0.0625, 0.0625],
+    "lambda_coord": 1,
+    "lambda_no_obj": 1,
+    "lambda_obj": 1,
+    "dataset_dir": "C:/Users/robert/Desktop/sem1/NN/datasets/DetectionPatches_512x512_ALL_No-Overlap",
+    "save_dir": "models",
+    "checkpoint": null,
+    "seed": 42,
+    "batch_size": 16,
+    "learning_rate": 2e-4,
+    "weight_decay": 5e-4,
     "epochs": 1000,
     "eval_interval": 5,
-    "checkpoint_interval": 200,
+    "checkpoint_interval": 100,
     "iou_threshold": 0.5,
-    "conf_threshold": 0.4,
-    "max_grad_norm": 5.0,
-    "lambda_noobj": 0.5,
-    "lambda_coord": 2.0,
-    "lambda_obj": 2.0,
-    "dropout": 0.1,
-    "grid": [8, 8]
+    "conf_threshold": 0.6
 }
