--- a/config.json
+++ b/config.json
@@ -9,39 +9,30 @@
         ["R", 8],
         ["C", 3, 512, 2, 1],
         ["R", 8],
-        ["C", 3, 1024, 2, 1],
-        ["R", 4],
+        ["C", 3, 1024, 1, 1],
+        ["R", 8],
         ["C", 1, 512, 1, 0],
         ["C", 3, 1024, 1, 1],
-        ["S"],
-        ["C", 1, 256, 1, 0],
-        ["U", 2],
-        ["C", 1, 256, 1, 0],
-        ["C", 3, 512, 1, 1],
-        ["S"],
-        ["C", 1, 128, 1, 0],
-        ["U", 2],
-        ["C", 1, 128, 1, 0],
-        ["C", 3, 256, 1, 1],
         ["P"]
     ],
-    "image_size": 512,
+    "image_size": 128,
     "in_channels": 1,
-    "grid": [64, 64],
-    "anchor": [0.0625, 0.0625],
+    "grid": [8, 8],
+    "anchor": [0.25, 0.25],
     "lambda_coord": 1,
     "lambda_no_obj": 1,
     "lambda_obj": 1,
+    "dropout": 0.0,
     "dataset_dir": "C:/Users/robert/Desktop/sem1/NN/datasets/DetectionPatches_512x512_ALL_No-Overlap",
     "save_dir": "models",
     "checkpoint": null,
     "seed": 42,
-    "batch_size": 16,
-    "learning_rate": 2e-4,
+    "batch_size": 128,
+    "learning_rate": 1e-4,
     "weight_decay": 5e-4,
     "epochs": 1000,
     "eval_interval": 5,
-    "checkpoint_interval": 100,
+    "checkpoint_interval": 200,
     "iou_threshold": 0.5,
-    "conf_threshold": 0.6
+    "conf_threshold": 0.5
 }
